--- a/frontend/src/styles/Homepage.css
+++ b/frontend/src/styles/Homepage.css
@@ -35,4 +35,10 @@
 }
 .title {
   text-align: center;
+  font-size: 20px;
+}
+.category-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
