--- a/frontend/src/styles/Homepage.css
+++ b/frontend/src/styles/Homepage.css
@@ -17,12 +17,10 @@
 }
 
 .products-list {
-  display: flex;
   gap: 20px;
   padding: 0.1%;
 }
 .product {
-  width: 25%;
   text-align: center;
 }
 .logo {
@@ -41,4 +39,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.ant-layout {
+  height: auto;
+}
+.ant-layout-content {
+  padding: 24px;
+  background-color: #fff;
+  min-height: 100vh;
 }
