--- a/frontend/src/styles/Homepage.css
+++ b/frontend/src/styles/Homepage.css
@@ -46,3 +46,8 @@
   background-color: #fff;
   min-height: 100vh;
 }
+.product img {
+  max-width: 80%;
+  max-height: 250px;
+  object-fit: contain;
+}
