--- a/frontend/src/styles/LoginAndRegister.css
+++ b/frontend/src/styles/LoginAndRegister.css
@@ -1,4 +1,4 @@
-.register-container {
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -6,7 +6,7 @@
   background-color: #002766;
 }
 
-.register-form {
+.form {
   max-width: 300px;
   padding: 40px;
   background-color: white;
@@ -14,7 +14,13 @@
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
 }
 
-.register-form-button {
+.form-button {
   width: 100%;
   background-color: #002766;
+}
+
+.register-link {
+  text-align: center;
+  margin-top: 10px;
+  font-size: 16px;
 }
