--- a/frontend/src/pages/Home/Homepage.css
+++ b/frontend/src/pages/Home/Homepage.css
@@ -28,7 +28,7 @@
   text-align: center;
   font-size: 20px;
 }
-.category-header {
+.category-link {
   display: flex;
   justify-content: space-between;
   align-items: center;
